tests/integration/commands/snapshots/integration__commands__check__minus_sign.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
-
stdout ---

stderr ---
error: expected digit following minus sign, found no significant characters
 --> stdin:1:1
  |
1 | -
  | ^
  | |
  | minus sign found here
  |
help: insert placeholder digits after the minus sign
  |
1 | -194
  |  +++
