tests/integration/commands/snapshots/integration__commands__check__missing_fraction.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
98.
stdout ---

stderr ---
error: expected fraction digit following dot, found no significant characters
 --> stdin:1:3
  |
1 | 98.
  | --^
  | | |
  | | decimal point found here
  | number found here
  |
help: insert placeholder digit after the decimal point
  |
1 | 98.0
  |    +
