tests/integration/commands/snapshots/integration__commands__check__object_empty_then_open.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{}{
stdout ---

stderr ---
error: unexpected token `{` after json finished
 --> stdin:1:3
  |
1 | {}{
  |   ^
  |
help: consider removing the trailing content (starting with `{`)
  |
1 - {}{
1 + {}
  |
