tests/integration/commands/snapshots/integration__commands__check__object_missing_value.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi":
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:6
  |
1 | {"hi":
  |      ^
  |      |
  |      expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"hi": "rust is a must"
  |        ++++++++++++++++
