tests/integration/commands/snapshots/integration__commands__check__unexpected_letter_in_negative.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
-abcd
stdout ---

stderr ---
error: expected digit following minus sign, found `a`
 --> stdin:1:1
  |
1 | -abcd
  | ^
  | |
  | minus sign found here
